# brokenspoke

./: .env  .gitignore  .markdownlint.yml  .prettierignore  404.html  Cargo.toml  Justfile  README.md  atom.xml  brokenspoke-words.txt  cspell.config.yaml  fips_place_lookup.csv  fips_place_lookup.manifest.json  index.html  robots.txt  search_index.en.js  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  help_request.md
.github/workflows/: assets.yml  bnacore.yml  docs.yml  incubator.yml  lambda-deployment-staging.yml  lambdas.yml  pipelines-brochures.yml  pipelines-retrieve.yml  spokes.yml  svggloo.yml  tools.yml
assets/city-ratings/: all-pfb-cr-historical-results-2025.csv  all-pfb-cr-results-2025.csv  city-ratings-all-historical-results-v24.01.csv  city-ratings-all-historical-results-v24.1.csv  city-ratings-all-historical-results-v24.2.csv  city-ratings-v21.14.csv  city-ratings-v21.15.csv  city-ratings-v22.10.csv  city-ratings-v22.7-sample.csv  city-ratings-v22.7.csv  city-ratings-v23.02.csv  city-ratings-v23.2-sample.csv  city-ratings-v23.2.csv  city-ratings-v25.09.csv
assets/city-ratings/split/: 0.csv  1000.csv  10000.csv  11000.csv  12000.csv  2000.csv  3000.csv  4000.csv  5000.csv  6000.csv  7000.csv  8000.csv  9000.csv
assets/city_ratings/: city-ratings-v23.2.csv  city_ratings_2022_v7_sample.csv  city_ratings_v21.14.csv  city_ratings_v22.10.csv  city_ratings_v22.7.csv
bnacore/: Cargo.toml  README.md  justfile  pyproject.toml
bnacore/examples/: csv_reader.rs  neon.rs  s3_calver.rs  to_shortcodes.rs  to_shortcodes_23.rs
bnacore/src/: bundle.rs  combine.rs  lib.rs  scorecard.rs  template.rs
bnacore/src/aws/: mod.rs  s3.rs
bnacore/src/neon/: mod.rs  model.rs
bnacore/src/scorecard/: mod.rs  scorecard21.rs  scorecard23.rs  scorecard24.rs  shortscorecard.rs
bnacore/src/versioning/: mod.rs
docs/: brokenspoke-words.txt  config.toml  index.html  justfile
docs/code-of-conduct/: index.html
docs/content/: _index.md
docs/content/docs/: _index.md  code-of-conduct.md
docs/content/docs/overview/: _index.md  developer-setup.md  glossary.md  overview.md
docs/content/docs/pipelines/: _index.md  brochures.md  retrieve.md
docs/content/docs/spokes/: _index.md  appender.md  bundle.md  bundler.md  retriever.md  shortcodes.md  svggloo.md
docs/overview/: index.html
docs/overview/developer-setup/: index.html
docs/overview/glossary/: index.html
docs/overview/overview/: index.html
docs/pipelines/: index.html
docs/pipelines/brochures/: index.html
docs/pipelines/retrieve/: index.html
docs/sass/: _variables.scss
docs/spokes/: index.html
docs/spokes/appender/: index.html
docs/spokes/bundle/: index.html
docs/spokes/bundler/: index.html
docs/spokes/retriever/: index.html
docs/spokes/shortcodes/: index.html
docs/spokes/svggloo/: index.html
docs/themes/adidoks/: config.toml
docs/themes/zola_easydocs_theme/content/content/: section.md
docs/themes/zola_easydocs_theme/content/getting-started/: configuration.md
docs/themes/zola_easydocs_theme/content/templates/feeds/: index.md
figures/: Justfile  README.rst  pyproject.toml
figures/figures/: brochure_etl.py  retrieve_etl.py
incubator/: README.md
incubator/bnapi/: justfile
incubator/bnapi/api/: Cargo.toml  README.md  examples.rest
incubator/bnapi/api/examples/: seeder.rs
incubator/bnapi/api/src/: main.rs  main.rs_
incubator/bnapi/entity/: Cargo.toml
incubator/bnapi/entity/src/entities/: bna.rs  city.rs  community_survey.rs  infrastructure.rs  mod.rs  prelude.rs  seaql_migrations.rs
incubator/bnapi/migration/: Cargo.toml  README.md
incubator/bnapi/migration/src/: m20220101_000001_create_table.rs
incubator/brochure-portal/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
incubator/brochure-portal/components/card/: card.js  package.json
incubator/brochure-portal/components/footer/: footer.js
incubator/brochure-portal/components/layout/: layout.js
incubator/brochure-portal/components/navbar/: navbar.js  package.json
incubator/brochure-portal/pages/: index.js
infra/kubernetes/: 00-setup.sh  Justfile
infra/kubernetes/nats.io/: natsio.sh
infra/kubernetes/pgadmin/: pgadmin.sh  values.minikube.yaml
infra/kubernetes/postgresql/: postgresql.sh  values.minikube.yaml
lambdas/: Cargo.toml  README.md
lambdas/src/: bna-fargate-run.rs  bna-fargate-status.rs  bna-prepare-destination.rs  bna-save-results.rs  bna-setup.rs  bna-sqs-parse.rs  bna-teardown.rs  lib.rs  scorecard.rs
lambdas/src/neon/: mod.rs  model.rs
pipelines/brochures/: Cargo.toml  README.md  brochure-pipeline.sh
pipelines/brochures/src/: main.rs
pipelines/retrieve/: Cargo.toml
pipelines/retrieve/src/: main.rs
spokes/: Cargo.toml  README.md
spokes/examples/brochures/: main.rs
spokes/examples/bundler/: main.rs
spokes/examples/retriever/: main.rs  single_city_rating.csv
spokes/src/: appender.rs  bundler.rs  retriever.rs  shortcodes.rs  svggloo.rs
svggloo/: .gitignore  Cargo.toml
tools/: fips.py  fips_as_str.py
