[workspace]
members = [
  "bnacore",
  "lambdas",
  "pipelines/brochures",
  "pipelines/retrieve",
  "spokes",
]
resolver = "2"

[workspace.dependencies]
async-std = "1.13.0"
aws_lambda_events = "0.16.0"
aws-config = "1.5.18"
aws-sdk-ecs = "1.69.0"
aws-sdk-s3 = "1.78.0"
aws-sdk-sqs = "1.61.0"
aws-smithy-types-convert = "0.60.9"
chrono = "0.4.40"
clap = "4.5.32"
color-eyre = "0.6.2"
csv = "1.1"
dotenv = "0.15.0"
fontdb = "0.23.0"
heck = "0.5.0"
http = "1.3.0"
image = "0.25.4"
lambda_http = "0.14.0"
lambda_runtime = "0.13.0"
libflate = "2.0.0"
lopdf = "0.36.0"
minijinja = "2.8.0"
nats = "0.25.0"
once_cell = "1.21.0"
regex = "1.11.1"
reqwest = "0.12.8"
rstest = "0.25.0"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
serde = "1.0.219"
serde_json = "1.0.140"
serde_plain = "1.0.2"
serde_with = "3.11.0"
simple-error = "0.3.0"
slug = "0.1.6"
svg2pdf = "0.13.0"
thiserror = "2.0.12"
time = "0.3.39"
tokio = "1.44.0"
tower = "0.5.2"
tower-cookies = "0.11.0"
tower-http = "0.6.1"
tracing = "0.1.34"
tracing-subscriber = "0.3.18"
trauma = "2.1.0"
url = "2.4.1"
usvg = "0.45.0"
uuid = "1.15.1"
walkdir = "2.4.0"
zip = "3.0.0"


[profile.flamegraph]
inherits = "release"
debug = true

[profile.dhat]
inherits = "release"
debug = 1

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
