[workspace]
members = ["bnacore", "pipelines/brochures", "pipelines/retrieve", "spokes"]
resolver = "2"

[workspace.dependencies]
aws-config = "1.8.12"
aws-sdk-s3 = "1.120.0"
clap = "4.5.54"
color-eyre = "0.6.5"
csv = "1.4.0"
dotenv = "0.15.0"
fontdb = "0.23.0"
image = "0.25.9"
libflate = "2.2.1"
lopdf = "0.38.0"
minijinja = "2.14.0"
regex = "1.12.2"
reqwest = "0.13.1"
rstest = "0.26.1"
serde = "1.0.228"
serde_json = "1.0.149"
serde_with = "3.16.1"
slug = "0.1.6"
svg2pdf = "0.13.0"
thiserror = "2.0.18"
time = "0.3.45"
tokio = "1.49.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
trauma = "2.3.0"
url = "2.5.8"
usvg = "0.46.0"
uuid = "1.19.0"
walkdir = "2.4.0"
zip = "7.0.0"


[profile.flamegraph]
inherits = "release"
debug = true

[profile.dhat]
inherits = "release"
debug = 1

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
