[package]
name = "bnacore"
version = "0.1.0"
edition = "2021"
description = "Provides the foundations for the BNA projects."
homepage = "https://github.com/PeopleForBikes/brokenspoke/bnacore"
keywords = ["bna", "core", "python"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PeopleForBikes/brokenspoke/bnacore"

[lib]
name = "bnacore"
crate-type = ["cdylib", "rlib"]

[dependencies]
csv = "1.1"
libflate = "2.0.0"
lopdf = "0.32.0"
minijinja = { workspace = true }
pyo3 = { version = "0.20.0" }
regex = "1.6.0"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1.0"
time = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }
zip = "0.6.4"

[dev-dependencies]
color-eyre = { workspace = true }
rstest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
extension-module = ["pyo3/extension-module"]
