[package]
name = "bnacore"
version = "0.1.0"
edition = "2021"
description = "Provides the foundations for the BNA projects."
homepage = "https://github.com/PeopleForBikes/brokenspoke/bnacore"
keywords = ["bna", "core", "python"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PeopleForBikes/brokenspoke/bnacore"

[lib]
name = "bnacore"
crate-type = ["cdylib", "rlib"]

[dependencies]
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
csv = { workspace = true }
libflate = { workspace = true }
lopdf = { workspace = true }
minijinja = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
  "blocking",
  "charset",
  "http2",
  "json",
  "rustls",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
time = { version = "0.3.45", features = ["macros", "serde-well-known"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
url = { workspace = true, features = ["serde"] }
walkdir = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
color-eyre = { workspace = true }
rstest = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }

[features]
# extension-module = ["pyo3/extension-module"]
