[tool.poetry]
name = "figures"
version = "0.1.0"
description = ""
authors = ["Rémy Greinhofer <remy.greinhofer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
diagrams = "^0.21.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[tool.isort]
profile = "black"
force_single_line = "true"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
