[package]
name = "bnalambdas"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.0.0"
aws-sdk-ecs = "1.1.0"
aws-sdk-s3 = "1.1.0"
aws-sdk-sqs = "1.1.0"
aws_lambda_events = "0.12.1"
bnacore = { path = "../bnacore" }
fontdb = "0.16.0"
image = "0.24.7"
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
minijinja = "1.0.9"
reqwest = { version = "0.11.22", features = [
  "json",
  "native-tls-vendored",
  "rustls",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_with = "3.4.0"
simple-error = "0.3.0"
svg2pdf = { "version" = "0.9.0" }
time = { version = "0.3.29", features = ["serde-well-known"] }
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
] }
url = { version = "2.4.1", features = ["serde"] }
usvg = "0.37.0"

[[bin]]
name = "bna-fargate-run"
path = "src/bna-fargate-run.rs"

[[bin]]
name = "bna-fargate-status"
path = "src/bna-fargate-status.rs"

[[bin]]
name = "bna-setup"
path = "src/bna-setup.rs"

[[bin]]
name = "bna-sqs-parse"
path = "src/bna-sqs-parse.rs"

[[bin]]
name = "bna-teardown"
path = "src/bna-teardown.rs"

[[bin]]
name = "scorecard"
path = "src/scorecard.rs"

[package.metadata.lambda.deploy]
memory = 128
timeout = 30
tracing = "active"
layers = [
  "arn:aws:lambda:us-west-2:345057560386:layer:AWS-Parameters-and-Secrets-Lambda-Extension:4",
]
