[package]
name = "bnalambdas"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.0.0"
aws-sdk-ecs = "1.1.0"
aws-sdk-s3 = "1.1.0"
aws-sdk-sqs = "1.1.0"
aws_lambda_events = "0.15.0"
bnacore = { path = "../bnacore" }
fontdb = "0.16.0"
image = "0.24.7"
lambda_http = "0.9.0"
lambda_runtime = "0.9.1"
minijinja = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
simple-error = "0.3.0"
svg2pdf = { "version" = "0.9.0" }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
usvg = "0.36.0"

[[bin]]
name = "bna-fargate-run"
path = "src/bna-fargate-run.rs"

[[bin]]
name = "bna-fargate-status"
path = "src/bna-fargate-status.rs"

[[bin]]
name = "bna-setup"
path = "src/bna-setup.rs"

[[bin]]
name = "bna-sqs-parse"
path = "src/bna-sqs-parse.rs"

[[bin]]
name = "bna-teardown"
path = "src/bna-teardown.rs"

[[bin]]
name = "scorecard"
path = "src/scorecard.rs"

[package.metadata.lambda.deploy]
memory = 128
timeout = 30
tracing = "active"
layers = [
  "arn:aws:lambda:us-west-2:345057560386:layer:AWS-Parameters-and-Secrets-Lambda-Extension:4",
]
