[package]
name = "bnalambdas"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { workspace = true }
aws-sdk-ecs = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-sqs = { workspace = true }
aws-smithy-types-convert = { workspace = true, features = ["convert-time"] }
aws_lambda_events = { workspace = true }
bnacore = { path = "../bnacore" }
csv = { workspace = true }
fontdb = { workspace = true }
image = { workspace = true }
lambda_http = { workspace = true }
lambda_runtime = { workspace = true }
minijinja = { workspace = true }
reqwest = { workspace = true, features = [
  "blocking",
  "json",
  "native-tls-vendored",
  "rustls-tls",
] }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_plain = { workspace = true }
serde_with = { workspace = true }
simple-error = { workspace = true }
slug = { workspace = true }
svg2pdf = { workspace = true }
time = { workspace = true, features = ["macros", "serde-well-known"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
usvg = { workspace = true }

[[bin]]
name = "bna-fargate-run"
path = "src/bna-fargate-run.rs"

[[bin]]
name = "bna-fargate-status"
path = "src/bna-fargate-status.rs"

[[bin]]
name = "bna-prepare-destination"
path = "src/bna-prepare-destination.rs"

[[bin]]
name = "bna-save-results"
path = "src/bna-save-results.rs"

[[bin]]
name = "bna-setup"
path = "src/bna-setup.rs"

[[bin]]
name = "bna-sqs-parse"
path = "src/bna-sqs-parse.rs"

[[bin]]
name = "bna-teardown"
path = "src/bna-teardown.rs"

[[bin]]
name = "scorecard"
path = "src/scorecard.rs"

[package.metadata.lambda.deploy]
memory = 128
timeout = 30
tracing = "active"
layers = [
  "arn:aws:lambda:us-west-2:345057560386:layer:AWS-Parameters-and-Secrets-Lambda-Extension:4",
]
