[package]
name = "spokes"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "appender"
path = "src/appender.rs"

[[bin]]
name = "bundler"
path = "src/bundler.rs"

[[bin]]
name = "retriever"
path = "src/retriever.rs"

[[bin]]
name = "shortcodes"
path = "src/shortcodes.rs"

[[bin]]
name = "svggloo"
path = "src/svggloo.rs"

[dependencies]
bnacore = { path = "../bnacore" }
clap = { version = "4.0.10", features = ["cargo", "derive"] }
color-eyre = { workspace = true }
tokio = { workspace = true }
trauma = "2.1.0"
url = { workspace = true }
uuid = { workspace = true }
