[package]
name = "spokes"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "appender"
path = "src/appender.rs"

[[bin]]
name = "bundler"
path = "src/bundler.rs"

[[bin]]
name = "retriever"
path = "src/retriever.rs"

[[bin]]
name = "shortcodes"
path = "src/shortcodes.rs"

[[bin]]
name = "svggloo"
path = "src/svggloo.rs"

[dependencies]
bnacore = { path = "../bnacore" }
clap = { workspace = true, features = ["cargo", "derive"] }
color-eyre = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
trauma = { workspace = true }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
