[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6" }
bnacore = { path = "../../../bnacore" }
chrono = "0.4.19"
color-eyre = "0.6.1"
dotenv = "0.15.0"
entity = { path = "../entity" }
once_cell = "1.12.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.4.12"
tower-cookies = "0.7.0"
tower-http = { version = "0.3.2", features = ["cors", "fs"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
url = "2.2.2"
uuid = "1.1.2"
nats = "0.23.0"
http = "0.2.8"

[dependencies.sea-orm]
version = "^0.10.0"
features = ["debug-print", "runtime-tokio-native-tls", "sqlx-postgres"]
