[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
bnacore = { path = "../../../bnacore" }
chrono = { workspace = true }
color-eyre = { workspace = true }
dotenv = { workspace = true }
entity = { path = "../entity" }
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tower-cookies = { workspace = true }
tower-http = { workspace = true, features = ["cors", "fs"] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
nats = { workspace = true }
http = { workspace = true }
sea-orm = { workspace = true, features = [
  "debug-print",
  "runtime-tokio-native-tls",
  "sqlx-postgres",
] }
